Fix collapsed sidebar logo hitbox

--- a/css/includes/components/_global-menu.scss
+++ b/css/includes/components/_global-menu.scss
@@ -150,17 +150,15 @@
 
    body.navbar-collapsed {
       .navbar-brand {
-         height: 65px;
-         min-width: 51px;
+         padding: 0.4rem !important;
+         margin: 0 calc(-1 * var(--tblr-gutter-x, 1.5rem)) 0.5rem;
+         width: calc(100% + var(--tblr-gutter-x, 1.5rem) * 2);
 
          .glpi-logo {
             background: url($logo_reduced) no-repeat;
             background-size: contain;
             width: 40px;
             height: 40px;
-            position: absolute;
-            top: 10px;
-            left: 16px;
          }
       }
 
